--- a/notebook/complete_tutorial.ipynb
+++ b/notebook/complete_tutorial.ipynb
@@ -1,174 +1,160 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "mount_file_id": "1iJM8wDK5SG2FC7Shz6FxsLKu_QYi3nKw",
-      "authorship_tag": "ABX9TyOQDh04uGzmVtZoAKgiYrwJ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bjoxiah/finetuning-phi-3-tutorial/blob/main/complete_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/drive/1iJM8wDK5SG2FC7Shz6FxsLKu_QYi3nKw?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "📦  Install Required Packages"
-      ],
       "metadata": {
         "id": "8KaAKmNNfqHv"
-      }
+      },
+      "source": [
+        "📦  Install Required Packages"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 📦 Clean and Stable Setup\n",
-        "!pip uninstall -y wandb\n",
-        "!pip install -q unsloth datasets pyarrow==19.0.0 # unsloth handles the other packages and dependencies"
-      ],
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "KfBXxayFPXpF"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 📦 Clean and Stable Setup\n",
+        "!pip uninstall -y wandb\n",
+        "!pip install -q unsloth datasets pyarrow==19.0.0 # unsloth handles the other packages and dependencies"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "🛑 Disable WANDB"
-      ],
       "metadata": {
         "id": "DNQdTJVUc6vX"
-      }
+      },
+      "source": [
+        "🛑 Disable WANDB"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.environ[\"WANDB_DISABLED\"] = \"true\"  # disable wandb logging"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "T-Ijm5b8Ss1j"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.environ[\"WANDB_DISABLED\"] = \"true\"  # disable wandb logging"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "🛠 It's recommended to load unsloth first"
-      ],
       "metadata": {
         "id": "jxj-fFl-dhBq"
-      }
+      },
+      "source": [
+        "🛠 It's recommended to load unsloth first"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import unsloth  # Import first, as Unsloth recommends"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ncdP9hfzQT0l"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import unsloth  # Import first, as Unsloth recommends"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "🤙 A Little House Keeping"
-      ],
       "metadata": {
         "id": "Hd0rMSHflgDX"
-      }
+      },
+      "source": [
+        "🤙 A Little House Keeping"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "print(torch.cuda.is_available(), torch.cuda.get_device_name(0))\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "9vi5--_9NKHt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "print(torch.cuda.is_available(), torch.cuda.get_device_name(0))\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "🗂 Give colab access to my drive"
-      ],
       "metadata": {
         "id": "XzYOsECennmD"
-      }
+      },
+      "source": [
+        "🗂 Give colab access to my drive"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive/')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0CTXbJCXVcvj"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive/')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "✅ Validate access to training dataset"
-      ],
       "metadata": {
         "id": "5A3d7AGdn-Nv"
-      }
+      },
+      "source": [
+        "✅ Validate access to training dataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qlgMD82tXCYO"
+      },
+      "outputs": [],
       "source": [
         "from datasets import load_dataset\n",
         "ds = load_dataset(\"json\", data_files=\"/content/drive/MyDrive/TrainingData/training_set_converted.jsonl\")\n",
         "print(ds[\"train\"][0])\n",
         "# Should show: {'messages': [{'role': 'system', 'content': '...'}, ...]}"
-      ],
-      "metadata": {
-        "id": "qlgMD82tXCYO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "⚙ Let's train!"
-      ],
       "metadata": {
         "id": "qH1qt8xBoYXe"
-      }
+      },
+      "source": [
+        "⚙ Let's train!"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "MQJEJg8fjegO"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "from unsloth import FastLanguageModel\n",
@@ -302,24 +288,24 @@
         "print(f\"\\n✅ Training Complete!\")\n",
         "print(f\"📦 LoRA model: https://huggingface.co/{hf_username}/{model_name}-lora\")\n",
         "print(f\"📦 Merged model: https://huggingface.co/{hf_username}/{model_name}\")"
-      ],
-      "metadata": {
-        "id": "MQJEJg8fjegO"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "▶ Let's run a test"
-      ],
       "metadata": {
         "id": "LDC4wEadrd1P"
-      }
+      },
+      "source": [
+        "▶ Let's run a test"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "z-RNkQ54kgV-"
+      },
+      "outputs": [],
       "source": [
         "from unsloth import FastLanguageModel\n",
         "\n",
@@ -346,12 +332,26 @@
         "inputs = tokenizer.apply_chat_template(messages, tokenize=True, add_generation_prompt=True, return_tensors=\"pt\").to(\"cuda\")\n",
         "outputs = model.generate(inputs, max_new_tokens=128, temperature=0.7)\n",
         "print(tokenizer.decode(outputs[0]))"
-      ],
-      "metadata": {
-        "id": "z-RNkQ54kgV-"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyOQDh04uGzmVtZoAKgiYrwJ",
+      "gpuType": "T4",
+      "include_colab_link": true,
+      "mount_file_id": "1iJM8wDK5SG2FC7Shz6FxsLKu_QYi3nKw",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
